spacing between links (fixes #5175)

--- a/src/app/community/community.scss
+++ b/src/app/community/community.scss
@@ -15,6 +15,10 @@
   gap: 0.5rem;
 }
 
+.mat-flat-button{
+  margin-right: 0.3125rem;
+}
+
 mat-toolbar {
   grid-area: links;
 }
